[tool.poetry]
name = "pipegoose"
version = "0.1.0"
description = ""
authors = ["xrsrke <hello@xrs.wtf>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
transformers = "^4.30.2"
datasets = "^2.13.0"
torchtyping = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
